--- a/VCELIN/public/hives.html
+++ b/VCELIN/public/hives.html
@@ -10,20 +10,27 @@
 </head>
 
 <body>
-    <h1>Hives CRD</h1>
+    <!-- Horní panel -->
+    <div class="navbar">
+        <a href="vizualizace.html">Vizualizace</a>
+        <a href="readme.html">Pomoc</a>
+    </div>
 
-    <!-- Formulář pro vytvoření nového úlu -->
-    <form id="hiveForm">
-        <input type="number" id="hive_year" placeholder="Enter Hive Year" required>
-        <input type="text" id="hive_name" placeholder="Enter Hive Name" required>
-        <button type="submit">Create Hive</button>
-    </form>
+    <div class="content">
+        <h1>Hives CRD</h1>
 
-    <h1>Read All Hives</h1>
-    <button id="loadButton" onclick="loadHives()">Load All Hives</button>
+        <!-- Formulář pro vytvoření nového úlu -->
+        <form id="hiveForm">
+            <input type="number" id="hive_year" placeholder="Enter Hive Year" required>
+            <input type="text" id="hive_name" placeholder="Enter Hive Name" required>
+            <button type="submit">Create Hive</button>
+        </form>
 
-    <div id="results"></div>
+        <h1>Read All Hives</h1>
+        <button id="loadButton" onclick="loadHives()">Load All Hives</button>
 
+        <div id="results"></div>
+    </div>
     <script>
         document.getElementById("hiveForm").addEventListener("submit", function (event) {
             event.preventDefault();
@@ -42,14 +49,14 @@
                     hive_name: hive_name
                 })
             })
-            .then(response => response.json())
-            .then(data => {
-                console.log(data);
-                // Vymazání formuláře po odeslání
-                document.getElementById("hiveForm").reset();
-                loadHives();
-            })
-            .catch(error => console.error("Error:", error));
+                .then(response => response.json())
+                .then(data => {
+                    console.log(data);
+                    // Vymazání formuláře po odeslání
+                    document.getElementById("hiveForm").reset();
+                    loadHives();
+                })
+                .catch(error => console.error("Error:", error));
         });
 
         function loadHives() {
@@ -83,20 +90,20 @@
             fetch(`/api/hives/${hive_id}`, {
                 method: 'DELETE',
             })
-            .then(response => {
-                if (response.ok) {
-                    alert(`Úl s ID ${hive_id} byl úspěšně smazán.`);
-                    loadHives();
-                } else {
-                    alert('Došlo k chybě při mazání úlu.');
-                }
-            })
-            .catch(error => {
-                console.error('Error deleting hive:', error);
-            });
+                .then(response => {
+                    if (response.ok) {
+                        alert(`Úl s ID ${hive_id} byl úspěšně smazán.`);
+                        loadHives();
+                    } else {
+                        alert('Došlo k chybě při mazání úlu.');
+                    }
+                })
+                .catch(error => {
+                    console.error('Error deleting hive:', error);
+                });
         }
 
-        
+
     </script>
 
 </body>
