--- a/VCELIN/public/productionRecord.html
+++ b/VCELIN/public/productionRecord.html
@@ -10,34 +10,41 @@
 </head>
 
 <body>
-    <h1>Create a New Production Record</h1>
+    <!-- Horní panel -->
+    <div class="navbar">
+        <a href="vizualizace.html">Vizualizace</a>
+        <a href="readme.html">Pomoc</a>
+    </div>
 
-    <!-- Formulář pro vytvoření nového záznamu produkce -->
-    <form id="productionForm">
-        <input type="number" id="production_box_id" placeholder="Enter Box ID" required>
-        <input type="number" id="production_volume" placeholder="Enter Volume" required>
-        <input type="date" id="production_date" required>
-        <select id="production_type" required>
-            <option value="" disabled selected>Type of production</option>
-            <option value="first">První</option>
-            <option value="second">Druhá</option>
-            <option value="third">Třetí</option>
-        </select>
-        <input type="text" id="production_note" placeholder="Enter Note" maxlength="200">
-        <button type="submit">Create Production</button>
-    </form>
+    <div class="content">
+        <h1>Create a New Production Record</h1>
 
-    <h1>Read All Production Records</h1>
-    <button id="loadButton" onclick="loadProductions()">Load All Productions</button>
+        <!-- Formulář pro vytvoření nového záznamu produkce -->
+        <form id="productionForm">
+            <input type="number" id="production_hive_id" placeholder="Enter Hive ID" required>
+            <input type="number" id="production_volume" placeholder="Enter Volume" required>
+            <input type="date" id="production_date" required>
+            <select id="production_type" required>
+                <option value="" disabled selected>Type of production</option>
+                <option value="first">První</option>
+                <option value="second">Druhá</option>
+                <option value="third">Třetí</option>
+            </select>
+            <input type="text" id="production_note" placeholder="Enter Note" maxlength="200">
+            <button type="submit">Create Production</button>
+        </form>
 
-    <div id="results"></div>
+        <h1>Read All Production Records</h1>
+        <button id="loadButton" onclick="loadProductions()">Load All Productions</button>
 
+        <div id="results"></div>
+    </div>
     <script>
         // Zpracování formuláře pro vytvoření nového záznamu produkce
         document.getElementById("productionForm").addEventListener("submit", function (event) {
             event.preventDefault();
 
-            let production_box_id = document.getElementById("production_box_id").value;
+            let production_box_id = document.getElementById("production_hive_id").value;
             let production_volume = document.getElementById("production_volume").value;
             let production_date = document.getElementById("production_date").value;
             let production_type = document.getElementById("production_type").value;
@@ -50,21 +57,21 @@
                     "Content-Type": "application/json"
                 },
                 body: JSON.stringify({
-                    production_box_id: production_box_id,
+                    production_box_id: production_hive_id,
                     production_volume: production_volume,
                     production_date: production_date,
                     production_type: production_type,
                     production_note: production_note
                 })
             })
-            .then(response => response.json())
-            .then(data => {
-                console.log(data);
-                // Vymazání formuláře po odeslání
-                document.getElementById("productionForm").reset();
-                loadProductions();
-            })
-            .catch(error => console.error("Error:", error));
+                .then(response => response.json())
+                .then(data => {
+                    console.log(data);
+                    // Vymazání formuláře po odeslání
+                    document.getElementById("productionForm").reset();
+                    loadProductions();
+                })
+                .catch(error => console.error("Error:", error));
         });
 
         // Funkce pro načtení všech záznamů produkce
@@ -77,7 +84,7 @@
 
                     data.forEach(record => {
                         const recordDiv = document.createElement('div');
-                        recordDiv.textContent = `Production ID: ${record.production_id}, Box ID: ${record.production_box_id}, Volume: ${record.production_volume} kg, Date: ${record.production_date}, Type: ${record.production_type}, Note: ${record.production_note}`;
+                        recordDiv.textContent = `Production ID: ${record.production_id}, Hive ID: ${record.production_hive_id}, Volume: ${record.production_volume} kg, Date: ${record.production_date}, Type: ${record.production_type}, Note: ${record.production_note}`;
 
                         // Přidání kontextového menu pro mazání záznamů
                         recordDiv.addEventListener('contextmenu', (event) => {
@@ -101,25 +108,25 @@
             fetch(`/api/productions/${production_id}`, {
                 method: 'DELETE',
             })
-            .then(response => {
-                if (response.ok) {
-                    alert(`Záznam produkce s ID ${production_id} byl úspěšně smazán.`);
-                    loadProductions();
-                } else {
-                    alert('Došlo k chybě při mazání záznamu.');
-                }
-            })
-            .catch(error => {
-                console.error('Error deleting production:', error);
-            });
+                .then(response => {
+                    if (response.ok) {
+                        alert(`Záznam produkce s ID ${production_id} byl úspěšně smazán.`);
+                        loadProductions();
+                    } else {
+                        alert('Došlo k chybě při mazání záznamu.');
+                    }
+                })
+                .catch(error => {
+                    console.error('Error deleting production:', error);
+                });
         }
 
         window.onload = function () {
             const urlParams = new URLSearchParams(window.location.search);
-            const boxId = urlParams.get('box_id');
+            const hiveId = urlParams.get('hive_id');
 
-            if (boxId) {
-                document.getElementById('production_box_id').value = boxId;
+            if (hiveId) {
+                document.getElementById('production_hive_id').value = hiveId;
             }
         };
     </script>
